Round entries in weapon table

--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -302,7 +302,7 @@ during the algorithm's execution.
 %\includegraphics[width=0.75\textwidth]{figs/sketch-ablation.png}
 \begin{table}[t!]
 \begin{centering}
-\textbf{Per-component performance improvement (ProPublica dataset)} \\
+Per-component performance improvement (ProPublica dataset) \\
 \end{centering}
 \vspace{1mm}
 \begin{tabular}{l | c  r | c | c}
@@ -368,18 +368,18 @@ See also Figure~\ref{fig:queue}. \\
 
 \begin{table}[t!]
 \begin{centering}
-\textbf{Per-component performance improvement (NYCLU stop-and-frisk dataset)} \\
+Per-component performance improvement (NYCLU stop-and-frisk dataset) \\
 \end{centering}
 \vspace{1mm}
 \begin{tabular}{l | c  r | c | c}
 & Total time & Slow- & Time to & Max evaluated~ \\
 Algorithm variant & (min) & down & optimum ($\mu$s) & prefix length \\
 \hline
-No priority queue (BFS) & 2.40 (0.2) & 3.03$\times$ & 25.66 (0.6) & 11-11 \\
-No support bounds & 1.49 (0.1) & 1.89$\times$ & 10.79 (0.3) & 11-12 \\
-No lookahead bound & 1.25 (0.1) & 1.59$\times$ & 6.87 (0.3) & 11-12 \\
-No symmetry-aware map & 613.78 (102.8) & 770.78$\times$ & 6.65 (0.1) & 11-11 \\
-No equivalent points bound & 2.40 (0.5) & 3.02$\times$ & 6.40 (0.4) & 13-13 \\
+No priority queue (BFS) & 2.4 (0.2) & 3.0$\times$ & 26 (0.6) & 11 \\
+No support bounds & 1.5 (0.1) & 1.9$\times$ & 11 (0.3) & 11-12 \\
+No lookahead bound & 1.3 (0.1) & 1.6$\times$ & 6.9 (0.3) & 11-12 \\
+No symmetry-aware map & 610 (100) & 770$\times$ & 6.7 (0.1) & 11 \\
+No equivalent points bound & 2.4 (0.5) & 3.0$\times$ & 6.4 (0.4) & 13 \\
 \hline
 \end{tabular}
 \begin{tabular}{l | c | c | c}
@@ -387,12 +387,12 @@ No equivalent points bound & 2.40 (0.5) & 3.02$\times$ & 6.40 (0.4) & 13-13 \\
  & Lower bound & Total queue &  Max queue \\
 Algorithm variant & evaluations ($\times 10^6$) & insertions ($\times 10^5$) & size ($\times 10^5$) \\
 \hline
-CORELS & 6.46 (0.5) & 1.73 (0.1) & 1.13 (0.1) \\
-No priority queue (BFS) & 20.07 (1.7) & 5.40 (0.5) & 2.00 (0.1) \\
-No support bounds & 12.15 (1.0) & 3.08 (0.3) & 1.91 (0.1) \\
-No lookahead bound & 10.24 (0.7) & 2.78 (0.2) & 1.82 (0.1) \\
-No symmetry-aware map & 5160.78 (848.8) & 1427.72 (238.0) & 1064.29 (175.6) \\
-No equivalent points bound & 25.19 (5.4) & 7.48 (0.5) & 4.64 (0.2) \\
+CORELS & 6.5 (0.5) & 1.7 (0.1) & 1.1 (0.1) \\
+No priority queue (BFS) & 20 (1.7) & 5.4 (0.5) & 2.0 (0.1) \\
+No support bounds & 12 (1.0) & 3.1 (0.3) & 1.9 (0.1) \\
+No lookahead bound & 10 (0.7) & 2.8 (0.2) & 1.8 (0.1) \\
+No symmetry-aware map & 5200 (850) & 1400 (240) & 1100 (180) \\
+No equivalent points bound & 25 (5.4) & 7.5 (0.5) & 4.6 (0.2) \\
 \end{tabular}
 %\vspace{4mm}
 \caption{Per-component performance improvement, as in Table~\ref{tab:ablation},
