Deleted a table row by mistake

--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -375,6 +375,7 @@ Per-component performance improvement (NYCLU stop-and-frisk dataset) \\
 & Total time & Slow- & Time to & Max evaluated~ \\
 Algorithm variant & (min) & down & optimum ($\mu$s) & prefix length \\
 \hline
+CORELS & 0.8 (0.1) & --- & 6.9 (0.2) & 11 \\
 No priority queue (BFS) & 2.4 (0.2) & 3.0$\times$ & 26 (0.6) & 11 \\
 No support bounds & 1.5 (0.1) & 1.9$\times$ & 11 (0.3) & 11-12 \\
 No lookahead bound & 1.3 (0.1) & 1.6$\times$ & 6.9 (0.3) & 11-12 \\
