--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -63,6 +63,7 @@ frisk and/or search stopped individuals, \ie when such
 interventions are likely to discover criminal possession of a weapon.
 
 \subsection{Example rule lists}
+\label{sec:examples}
 
 We first ran a 10-fold cross validation experiment using CORELS
 and eight other algorithms:
