Table for recidivism data and antecedent mining, min support

--- a/paper/sections/bounds.tex
+++ b/paper/sections/bounds.tex
@@ -699,7 +699,9 @@ rule mining~(\S\ref{sec:setup}).
 %
 Specifically, it implies that we should only mine rules with
 normalized support of at least~$\Reg$;
-we need not mine rules with a smaller fraction of observations.
+we need not mine rules with a smaller fraction of observations.~\footnote{We
+describe our application of this idea in Appendix C, where provide details on
+data processing.}
 %
 In contrast, we can only apply Theorem~\ref{thm:min-capture-correct}
 in the context of constructing rule lists;
