--- a/paper/sections/appendix.tex
+++ b/paper/sections/appendix.tex
@@ -249,6 +249,51 @@ By~\eqref{eq:similar-analogous},
 
 \section*{Appendix C. Data processing details and antecedent mining}
 
+\textbf{ProPublica recidivism dataset}
+Table~\ref{tab:recidivism-data} shows the 7 attributes
+and corresponding 19 categorical values
+that we use for the ProPublica dataset.
+%
+From these, we construct 19 single-clause antecedents, \eg ${(age = 23-25)}$.
+%
+We then combine pairs of these antecedents as conjunctions to form
+two-clause antecedents, \eg ${(age = 23-25) \wedge (priors = 2-3)}$.
+%
+By virtue of our lower bound on antecedent support,
+(Theorem~\ref{thm:min-capture},~\S\ref{sec:lb-support}),
+we eliminate antecedents with support less than 0.005 or greater than 0.995,
+since ${\Reg = 0.005}$ is the smallest regularization parameter value
+we study for this problem.
+%
+With this filtering step, we generate between 155 and 157 antecedents
+for each fold; without it, we would instead generate 361 antecedents --
+more than twice as many -- as input to our algorithm.
+
+\begin{table}[h!]
+\centering
+%$Q_\text{max}$ $K_\text{max}$
+\begin{tabular}{l  | c  c  c}
+Feature & Value range & Categorical values & Count \\
+\hline
+sex & --- & male, female & 2 \\
+age & 18-96 & 18-20, 21-22, 23-25, 26-45, $>$45  & 5 \\
+juvenile felonies & 0-20 & 0, $>$0 & 2 \\
+juvenile misdemeanors & 0-13 & 0, $>$0 & 2 \\
+%other juvenile crimes & 0-17 & --- & 2 \\
+juvenile crimes & 0-21 & 0, $>$0 & 2 \\
+priors & 0-38 & 0, 1, 2-3, $>$3 & 4 \\
+current charge & --- & misdemeanor, felony & 2
+\end{tabular}
+%\vspace{4mm}
+\caption{Categorical features (7 attributes, 19 values) from the ProPublica dataset.
+We construct the feature \emph{juvenile crimes} from the sum of
+\emph{juvenile felonies}, \emph{juvenile misdemeanors}, and
+the number of juvenile crimes that were neither felonies nor misdemeanors (not shown).
+}
+\vspace{4mm}
+\label{tab:recidivism-data}
+\end{table}
+
 \textbf{NYCLU stop-and-frisk dataset.} The original dataset contains 45,787 records,
 each describing an incident involving a stopped person; the individual
 was frisked in 30,345 (66.3\%) of records and and searched in 7,283 (15.9\%).
@@ -270,12 +315,11 @@ We generate cross-validation folds first, and then resample within each fold.
 In our 10-fold cross-validation experiments, each training set contains 50,743 datapoints.
 
 Table~\ref{tab:frisk-data} shows the 5 categorical attributes,
-corresponding to a total of 28 dimensions, that we use from the
-NYCLU stop-and-frisk dataset for the weapon prediction problem.
+corresponding to a total of 28 values.
 %
 Our results in~\S\ref{sec:examples} through~\S\ref{sec:sparsity}
 are from experiments that use 28 single-clause antecedents corresponding
-these 28 dimensions, \eg (\emph{stop reason = suspicious object}).
+these 28 values, \eg (\emph{stop reason = suspicious object}).
 %
 Our experiments in~\S\ref{sec:traces} use the same antecedents,
 as well as negations of the 18 antecedents corresponding to the two features
@@ -285,8 +329,8 @@ which gives a total of 46 antecedents.
 \begin{table}[h!]
 \centering
 %$Q_\text{max}$ $K_\text{max}$
-\begin{tabular}{l | l | c}
-Feature & Values & Dim. \\
+\begin{tabular}{l | c  c}
+Feature & Values & Count \\
 \hline
 stop reason & suspicious object, fits description, casing, & 9 \\
 & acting as lookout, suspicious clothing, & \\
@@ -307,7 +351,7 @@ location & housing authority, transit authority, & 3 \\
 inside or outside & inside, outside & 2 \\
 \end{tabular}
 %\vspace{4mm}
-\caption{Categorical features (28 dimensions) from the NYCLU stop-and-frisk dataset.}
+\caption{Categorical features (5 attributes, 28 values) from the NYCLU dataset.}
 \vspace{4mm}
 \label{tab:frisk-data}
 \end{table}
@@ -425,7 +469,7 @@ will be found on a stopped individual who is frisked or searched.
 %
 Figure~\ref{fig:weapon-rule-list-04-01} shows
 regularization parameters~${\Reg = 0.04}$ and~0.01,
-and Figure~\ref{fig:weapon-rule-list-0025} shows~0.0025.
+and Figure~\ref{fig:weapon-rule-list-0025} shows~${\Reg = 0.0025}$.
 
 For each of the two larger regularization parameters in Figure~\ref{fig:weapon-rule-list-04-01},
 ${\Reg = 0.04}$~(top) and 0.01~(bottom), we observe that across the folds,
